--- a/public/wp-content/themes/blackrock/scss/layout/_footer.scss
+++ b/public/wp-content/themes/blackrock/scss/layout/_footer.scss
@@ -7,6 +7,8 @@
     z-index: 1000;
     @include body-16;
     margin-bottom: 0;
+    position: relative;
+    z-index: 10;
 
     @media #{$mq-tablet-port}{
         height: 80px;
