--- a/public/wp-content/themes/blackrock/scss/modules/_contact.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_contact.scss
@@ -1,8 +1,11 @@
 .contact-module-container {
     background-color: #000000;
     width: 100vw;
+    margin-top: calc(100vw / 12);
     padding-top: calc(100vw / 12);
     padding-bottom: calc(100vw / 12);
+    position: relative;
+    z-index: 4;
 
     .contacts-container {
         @include grid;
@@ -14,34 +17,45 @@
 
         .left {
             @include grid;
+            align-content: space-evenly;
             grid-area: contacts;
             margin: 0 !important;
             padding-top: calc(100vw / 12);
 
-            h2 {
-                @include headline-30;
-                padding-bottom: calc(100vw / 24);
-                color: white;
-                margin-left: 20px;
-                margin-bottom: 40px;
+            .copy {
+                display: block;
+                height: auto;
+                padding: 0;
+                margin: 0;
+                
 
-                @media #{$mq-tablet-port}{
-                    @include headline-50;
-                    margin-left: 0;
-                    margin-bottom: 0;
+                h2 {
+                    @include headline-30;
+                    padding-bottom: calc(100vw / 24);
+                    color: white;
+                    margin-left: 20px;
+                    margin-bottom: 40px;
+                    margin-top: 0;
+
+                    @media #{$mq-tablet-port}{
+                        @include headline-50;
+                        margin-left: 0;
+                    }
                 }
-            }
 
-            img {
-                width: 100px;
-                margin-left: 20px;
-                margin-bottom: 40px;
+                img {
+                    width: 100px;
+                    margin-left: 20px;
+                    margin-bottom: 40px;
 
-                @media #{$mq-tablet-port}{
-                    width: 100%;
-                    margin-left: 0;
-                    margin-bottom: 0;
-                }   
+                    @media #{$mq-tablet-port}{
+                        width: auto;
+                        margin-left: 0;
+                        margin-bottom: 0;
+                        margin-top: calc(100vw / 12);
+                        margin-bottom: calc(100vw / 24);
+                    }   
+                }
             }
         }
 
@@ -49,8 +63,9 @@
             @include grid;
             
             @media #{$mq-tablet-port}{
-                padding-top: calc(100vw / 24);
+                padding: 0 !important;
                 margin: 0 !important;
+                
                 grid-template-columns: repeat(3, 1fr);
             }
 
@@ -108,4 +123,12 @@
 
 .contact-open .contact-module-container {
     transform: translateX(0);
+}
+
+.home .contact-module-container {
+    margin-top: 0;
+    
+    @media #{$mq-tablet-port}{
+        margin-top: calc((100vh - 80px) *-1);
+    }
 }
