--- a/public/wp-content/themes/blackrock/scss/modules/_copy_two_images.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_copy_two_images.scss
@@ -1,55 +1,90 @@
 .copy-two-images {
     @include grid;
 
+    margin: 40px 0 0 0;
+
     @media #{$mq-tablet-port}{
-        margin: 0 40px calc(100vw / 12) 40px;
-        grid-template-columns: 6fr 2fr 4fr;
-        grid-template-areas: "copy-image . image-container";
+
     }
 
-    .copy-image {
-        grid-area: copy-image;
+    .copy {
+        padding: 40px 20px;
+        grid-area: copy;
+       
+        @media #{$mq-tablet-port}{
+            padding: 0 0 calc(100vw / 12) 0;
+        }
+
+        p {
+            @include body-35;
+
+            &:last-of-type {
+                margin-top: 0;
+            }
+
+            span {
+                color: $br-blue;
+                @include body-20;
+            }
+        } 
+    }
+
+    .image-container.first {
+        grid-area: image-container-left;
         
-        .copy {
-            padding-bottom: calc(100vw / 12);
-           
-            p {
-                @include body-35;
-
-                &:last-of-type {
-                    margin-top: 0;
-                }
-
-                span {
-                    color: $br-blue;
-                    @include body-20;
-                }
-            } 
+        @media #{$mq-tablet-desk}{
+            padding-top: calc(100vw / 12);
         }
     }
-    
-    .image-container {
-        grid-area: image-container;
-        padding-top: calc(100vw / 12);
+
+    .image-container.second {
+        grid-area: image-container-right;
+        
+        @media #{$mq-tablet-desk}{
+            margin-top: calc((100vw / 12) * -2);
+        }
     }
 
+    @media #{$mq-tablet-port}{
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "copy copy" "image-container-left image-container-right";
+    }
+
+    @media #{$mq-tablet-desk}{
+        margin: calc(100vw / 12) 40px 0 40px;
+        grid-template-columns: 6fr 2fr 4fr;
+        grid-template-areas: "copy . image-container-left" "image-container-right . .";
+    }
+
+
+
+    
+
+
     &.mirrored {
+
         @media #{$mq-tablet-port}{
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: "copy copy" "image-container-right image-container-left";
+        }
+
+        @media #{$mq-tablet-desk}{
             grid-template-columns: 6fr 1fr 5fr;
-            grid-template-areas: "image-container . copy-image";
+            grid-template-areas: "image-container-left . copy" ". . image-container-right";
         }
         .image-container {
             padding-top: 0;
         }
         
-        .copy-image .image-container {
-            @media #{$mq-tablet-port}{
-                display: grid;
-                grid-template-columns: 1fr 4fr;
-                grid-template-areas: 
-                    ". img"
-                    ". cap";
-            }
+        .image-container {
+
+            // @media #{$mq-tablet-port}{
+            //     display: grid;
+            //     grid-template-columns: 1fr 4fr;
+            //     grid-template-areas: 
+            //         ". img"
+            //         ". cap";
+            // }
 
             .image {
                 grid-area: img;
