--- a/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
@@ -1,7 +1,18 @@
 #home-hero  {
     z-index: 2;
 }
- 
+
+.mobile-header-background {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+
+    @media #{$mq-tablet-port}{
+        display: none;
+    }
+}
+
 .column-reveal {
     width: 100vw;
     max-width: 100%;
@@ -53,6 +64,15 @@
         z-index: 10;
         opacity: 1;
 
+        h1 {
+            width: calc(100vw - 80px);
+            margin-left: 50%;
+            transform: translateX(-50%);
+            svg {
+                width: 100%;
+            }
+        }
+
         h2 {
             @include headline-30;
             margin-top: calc((100vw / 12) * 1.5);
@@ -65,18 +85,23 @@
 
         h2, 
         p {
-            @media #{$mq-mobile}{
-                max-width: (100vw / 3);
+            max-width: calc(100vw - 80px);
+            
+
+            @media #{$mq-tablet-port}{
+
                 margin-left: 50%;
                 transform: translateX(-50%);
+                max-width: (100vw / 3);
             }
+        
         }
     }
 
     .column-reveal_container {
         height: auto;
         top: 0;
-        background-color: #E7E7E7;
+        background-color: $br-cream;
         width: 100vw;
         padding-top: 0;
 
@@ -95,14 +120,19 @@
         }
 
         h3 {
+            @include headline-30;
+            margin: 40px 20px 0 20px;
+
             @media #{$mq-tablet-port}{
                 position: absolute;
-                top: 150vh;
-                left: 200px;
+                bottom: calc(100vw / 12);
+                max-width: 50vw;
+                left: 40px;
                 z-index: 2;
                 color: white;
                 @include headline-75;
                 opacity: 0;
+                margin: 0;
             }
         }
     }
@@ -142,6 +172,7 @@
             background-repeat: no-repeat;
             transition: all 0s ease 0s;
             transform-origin: center;
+            pointer-events: none;
         }
     }
     
@@ -171,4 +202,17 @@
     .column-reveal_slices .slice_contain:nth-child(10) .slice { background-position: calc((100vw / 12)* -9) 0;}
     .column-reveal_slices .slice_contain:nth-child(11) .slice { background-position: calc((100vw / 12)* -10) 0;}
     .column-reveal_slices .slice_contain:nth-child(12) .slice { background-position: calc((100vw / 12)* -11) 0;}
+
+    &.last-item {
+        
+        @media #{$mq-tablet-port}{
+            background-color: black;
+
+            .column-reveal_container {
+                
+                background-color: black;
+            }
+
+        }
+    }
 }
