--- a/public/wp-content/themes/blackrock/scss/style.scss
+++ b/public/wp-content/themes/blackrock/scss/style.scss
@@ -11,6 +11,7 @@
 @import "elements/_buttons.scss";
 @import "elements/_modal.scss";
 
+@import "modules/_error404.scss";
 @import "modules/_card_carousel.scss";
 @import "modules/_page_reveal_slicing.scss";
 @import "modules/_copy_two_images.scss";
