--- a/public/wp-content/themes/blackrock/css/style.css
+++ b/public/wp-content/themes/blackrock/css/style.css
@@ -616,12 +616,15 @@ a.button:hover svg {
 
 /* line 1, ../scss/modules/_error404.scss */
 .error-404 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-/* line 7, ../scss/modules/_error404.scss */
+/* line 10, ../scss/modules/_error404.scss */
 .error-404 h2 {
   font-weight: normal;
   font-size: 30px;
@@ -629,6 +632,14 @@ a.button:hover svg {
   margin-bottom: 0;
   padding-bottom: 0;
   font-family: "PPNeueMontreal-Medium";
+  text-align: center;
+}
+/* line 15, ../scss/modules/_error404.scss */
+.error-404 a {
+  margin-top: 40px;
+}
+/* line 19, ../scss/modules/_error404.scss */
+.error-404 .inner {
   text-align: center;
 }
 
