--- a/public/wp-content/themes/blackrock/scss/modules/_error404.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_error404.scss
@@ -1,4 +1,7 @@
 .error-404 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    max-width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -6,6 +9,14 @@
 
     h2 {
         @include headline-30;
+        text-align: center;
+    }
+
+    a {
+        margin-top: 40px;
+    }
+
+    .inner {
         text-align: center;
     }
 }
